--- a/Session_0_install_packages.Rmd
+++ b/Session_0_install_packages.Rmd
@@ -18,7 +18,8 @@ This will make more sense as we go through the workshop but will be run before i
 remotes::install_github("rlesur/klippy")
 # List of required packages
 required_packages <- c("ggplot2","tidyverse","dplyr","hrbrthemes","viridis","ggpubr","GGally","ggridges","tidyr","scales","deSolve","bayestestR",
-"shinySIR","epiR","pROC","mixtools","broom","ggiraphExtra","MASS","bbmle","coda","rjags","bayesplot","spatstat","forecast","pacman","devtools","BiocManager")
+"shinySIR","epiR","pROC","mixtools","broom","ggiraphExtra","MASS","bbmle","coda","rjags","bayesplot","spatstat","forecast","pacman","devtools","BiocManager",
+"rio","here","tsibble","slider","imputeTS","feasts","forecast","trending","yardstick","surveillance","readxl")
 
 # Function to check if a package is installed
 is_package_installed <- function(package_name) {
